updated the overflow hidden prevent side scroll when in mobile view

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
 
 body{
-  background:#0B0F14;
-  color:#3DF2E0;
+  background: #020617;
+  color: #3DF2E0;
   font-family: 'Orbitron', sans-serif;
+  margin:0;
+  padding:0;
+  overflow-x:hidden; /* prevent side scroll */
 }
